--- a/css/partials/_page_sections.styl
+++ b/css/partials/_page_sections.styl
@@ -51,6 +51,7 @@ footer#TrayBottom
   display: flex
   flex: 1 0
   flex-flow: row nowrap
+  z-index: 100
 
 // TODO - Transform maybe
 // .settings
